test/testData/parser/negative/expressions/unaryOps.err
test/testData/parser/negative/expressions/unaryOps.c:3:17: error: address of register variable requested
test/testData/parser/negative/expressions/unaryOps.c:3:17: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:18: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:19: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:20: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:21: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:22: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:23: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:24: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:25: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:30: error: indirection requires pointer operand ('signed int' invalid)
test/testData/parser/negative/expressions/unaryOps.c:3:31: error: indirection requires pointer operand ('float' invalid)
test/testData/parser/negative/expressions/unaryOps.c:3:32: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:33: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:34: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:35: error: indirection requires pointer operand ('STRUCT S' invalid)
test/testData/parser/negative/expressions/unaryOps.c:3:36: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:42: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:43: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:44: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:45: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:46: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:47: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:48: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:49: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:54: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:55: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:56: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:57: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:58: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:59: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:60: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:61: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:66: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:67: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:68: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:69: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:70: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:71: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:72: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:73: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:78: warning: expression result unused
test/testData/parser/negative/expressions/unaryOps.c:3:79: error: invalid argument type 'float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:80: error: invalid argument type '*signed int' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:81: error: invalid argument type '*float' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:82: error: invalid argument type 'signed int[20]' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:83: error: invalid argument type 'STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:84: error: invalid argument type '*STRUCT S' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:85: error: invalid argument type '*void' to unary expression
test/testData/parser/negative/expressions/unaryOps.c:3:94: error: cannot increment value of type 'signed int[20]'
test/testData/parser/negative/expressions/unaryOps.c:3:95: error: cannot increment value of type 'STRUCT S'
test/testData/parser/negative/expressions/unaryOps.c:3:106: error: cannot decrement value of type 'signed int[20]'
test/testData/parser/negative/expressions/unaryOps.c:3:107: error: cannot decrement value of type 'STRUCT S'
